<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.hageldave.jplotter</groupId>
	<artifactId>jplotter</artifactId>
	<version>0.6.2-SNAPSHOT</version>

	<name>JPlotter</name>
	<url>https://github.com/hageldave/JPlotter</url>
	<description>
		The jplotter artifact provides a framework for scientific 2D
		visualizations such as scatter plots, contour lines, line graphs
		or vector field 'quiver' plots.
		It is using OpenGL and integrates into the AWT environment for
		graphical user interfaces.
	</description>

	<licenses>
		<license>
			<name>The MIT License (MIT)</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- include source in jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- OpenGL -->
		<dependency>
			<groupId>org.lwjglx</groupId>
			<artifactId>lwjgl3-awt</artifactId>
			<version>0.1.7</version>
		</dependency>
		<!-- Image manipulation and creation -->
		<dependency>
			<groupId>com.github.hageldave.imagingkit</groupId>
			<artifactId>imagingkit-core</artifactId>
			<version>2.1</version>
		</dependency>
		<!-- Scalable Vector Graphics -->
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-all</artifactId>
			<version>1.14</version>
		</dependency>
		<!-- Render PDFs -->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.28</version>
		</dependency>
		<!-- PDF bridge -->
		<dependency>
			<groupId>de.rototor.pdfbox</groupId>
			<artifactId>graphics2d</artifactId>
			<version>0.34</version>
		</dependency>
	</dependencies>

	<profiles>
		<!-- Release Artifact to Nexus -->
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<!-- include javadocs in jar -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.3.1</version>
						<configuration>
							<source>8</source>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- gpg signing -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- nexus staging -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<scm>
		<url>https://github.com/hageldave/JPlotter.git</url>
	</scm>

	<developers>
		<developer>
			<id>hageldave</id>
			<name>David Hägele</name>
			<email>haegele.david@gmail.com</email>
		</developer>
		<developer>
			<id>lvcarx</id>
			<name>Luca Reichmann</name>
		</developer>
	</developers>

</project>
